# thesis

./: .gitignore  CMakeLists.txt  run.sh
conf/: path_planner_conf.pb.txt  planning_conf.pb.txt  speed_profile_conf.pb.txt  speed_profile_config.pb.txt  speed_profile_config_unstructured.pb.txt
conf/speed_tests/: change_lane_test_config.pb.txt  emergency_stop_test_config.pb.txt
proto/: environment_conf.proto  generate_protc_py.sh  path_planner_conf.proto  path_planner_debug.proto  planning_conf.proto  planning_debug.proto  prediction_obstacles.proto  speed_profile_conf.proto  speed_profile_debug.proto  trajectory.proto  vehicle_state.proto
resources/roads/: environment_conf_01.txt  environment_conf_02.txt  environment_conf_03.txt  environment_conf_04.txt  environment_conf_05.txt  unstructured_conf.txt
resources/speed_test_path/: unstructured_path.txt
resources/tests/: environment_conf_01.txt  environment_conf_01.txt_next  environment_conf_01_0.2.txt  environment_conf_01_0.2.txt_next
scripts/: replan.zsh
scripts/visualization/: path_planner_debug_pb2.py  path_planning_vis.py  speed_profile_debug_pb2.py  test.py
src/: main.cpp  planner.cpp  planner.h
src/common/: obstacles.cpp  obstacles.h  planning_status.h  reference_path.cpp  reference_path.h  reference_route.cpp  reference_route.h  static_obstacles.cpp  static_obstacles.h  timer.h
src/frame/: frame.h  frenet_frame.cpp  frenet_frame.h  structured_frame.cpp  structured_frame.h  unstructured_frame.cpp  unstructured_frame.h
src/path_planner/: gnat.cpp  gnat.h  heuristic_rrt.cpp  heuristic_rrt.h  image_proc.cpp  image_proc.h  node.h  path_planner.cpp  path_planner.h  path_planner_record.cpp  path_planner_record.h  probablistic_map.cpp  probablistic_map.h  searching_frame.cpp  searching_frame.h
src/speed_planner/: ReferencePath.cpp  ReferencePath.h  dynamic_obstacles.cpp  dynamic_obstacles.h  node.h  obstacles.cpp  obstacles.h  rrt.cpp  rrt.h  speed_planner.cpp  speed_planner.h  speed_profile_record.cpp  speed_profile_record.h
src/utils/: file_config.h  spline.cpp  spline.h  string.h  timer.h
